--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Stargate
-main: com.bukkit.TheDgtl.Stargate.Stargate
-version: 0.01
+main: net.TheDgtl.Stargate.Stargate
+version: 0.03
 description: Stargate mod for Bukkit
 author: Drakia
 website: http://www.thedgtl.net
