Update to teleport method Update spawn minecart method

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Stargate
 main: net.TheDgtl.Stargate.Stargate
-version: 0.4.9
+version: 0.5.0b
 description: Stargate mod for Bukkit
 author: Drakia
 website: http://www.thedgtl.net
