Fixed an issue with personal gates Added default permissions

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Stargate
 main: net.TheDgtl.Stargate.Stargate
-version: 0.6.1
+version: 0.6.2
 description: Stargate mod for Bukkit
 author: Drakia
 website: http://www.thedgtl.net
@@ -8,3 +8,22 @@ commands:
   sg:
     description: Used to reload the plugin. Console use only.
     usage: /<command> reload - Used to reload the plugin. Console use only.
+permissions:
+  stargate.use:
+    description: Allow use of all gates linking to any world in any network
+    default: true
+  stargate.create:
+    description: Allow creating gates on any network
+    default: op
+  stargate.destroy:
+    description: Allow destruction gates on any network
+    default: op
+  stargate.free:
+    description: Allow free use/creation/destruction of gates
+    default: op
+  stargate.option:
+    description: Allow use of all options
+    default: op
+  stargate.admin:
+    description: Allow all admin features (Hidden/Private only so far)
+    default: op
