--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Stargate
 main: net.TheDgtl.Stargate.Stargate
-version: 0.6.7-dev
+version: 0.6.9
 description: Stargate mod for Bukkit
 author: Drakia
 website: http://www.thedgtl.net
