[Version 0.7.1]  - Added destMemory option  - Switched to sign.update() as Bukkit implemented my fix  - Threw in a catch for a null from location for portal events

--- a/src/config.yml
+++ b/src/config.yml
@@ -13,6 +13,8 @@ destroyexplosion: false
 maxgates: 0
 # The language file to load for messages
 lang: en
+# Whether to remember the cursor location between uses
+destMemory: false
 
 # Stargate economy options
 
