Lava and water gates no longer destroy on reload "sg reload" now closes gates before reloading Added Vault support Added missing "useiConomy" option in default config

--- a/src/config.yml
+++ b/src/config.yml
@@ -19,7 +19,7 @@ destMemory: false
 # Stargate economy options
 
 # Whether to use an economy plugin (Uses Register to interact with all economy plugins)
-useiconomy: 
+useiconomy: false
 # The cost to create a gate
 createcost: 0
 # The cost to destroy a gate
