--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Stargate
 main: net.TheDgtl.Stargate.Stargate
-version: 0.7.2
+version: 0.7.3.1-pre
 description: Stargate mod for Bukkit
 author: Drakia
 website: http://www.thedgtl.net
