--- a/src/config.yml
+++ b/src/config.yml
@@ -15,6 +15,8 @@ maxgates: 0
 lang: en
 # Whether to remember the cursor location between uses
 destMemory: false
+# Ignore the entrance blocks of a gate when checking. Used to work around snowmen
+ignoreEntrance: false
 
 # Stargate economy options
 
