[Version 0.7.5.0]  - Refactored creation code a bit  - Added StargateCreateEvent, see Stargate-API for usage.  - Added StargateDestroyEvent, see Stargate-API for usage.  - Updated Event API to the new standard, please see: http://wiki.bukkit.org/Introduction_to_the_New_Event_System  - Added handleVehicles option.  - Added 'N'o Network option (Hides the network from the sign)

--- a/src/config.yml
+++ b/src/config.yml
@@ -17,6 +17,8 @@ lang: en
 destMemory: false
 # Ignore the entrance blocks of a gate when checking. Used to work around snowmen
 ignoreEntrance: false
+# Whether to allow vehicles through gates
+handleVehicles: true
 
 # Stargate economy options
 
