Resolve issue with explosion cancelling leaving invalid gates (Data values) Check blockBreakEvents for gate entrance blocks is protectEntrance is enabled (More intensive than regular check. Only enable if required)

--- a/src/config.yml
+++ b/src/config.yml
@@ -38,6 +38,8 @@ chargefreedestination: true
 freegatesgreen: false
 # Whether to sort network lists alphabetically
 sortLists: false
+# Whether to protect gate entrance material
+protectEntrance: false
 
 # Debug -- Only enable if you have issues, massive console output
 debug: false
