--- a/src/config.yml
+++ b/src/config.yml
@@ -1,49 +1,51 @@
 # Stargate Configuration File
 # Main Stargate config
-
-# The folder for storing portals
+#
+# portal-folder -  The folder for storing portals
+# gate-folder - The folder for storing gate layouts
+# default-gate-network - The default gate network
+# destroyexplosion - Whether or not to destroy gates with explosions (Creeper, TNT, etc)
+# maxgates - The maximum number of gates allowed on a network - 0 for unlimited
+# lang - The language file to load for messages
+# destMemory - Whether to remember the cursor location between uses
+# ignoreEntrance - Ignore the entrance blocks of a gate when checking. Used to work around snowmen
+# handleVehicles - Whether to allow vehicles through gates
+# sortLists - Whether to sort network lists alphabetically
+# protectEntrance - Whether to protect gate entrance material (More resource intensive. Only enable if using destroyable open/closed material)
+# signColor - The color used for drawing signs (Default: BLACK). See: 
+############################
+# Stargate economy options #
+############################
+# useiconomy - Whether to use an economy plugin (Uses Register to interact with all economy plugins)
+# createcost - The cost to create a gate
+# destroycost - The cost to destroy a gate
+# usecost - The cost to use a gate
+# toowner - Whether the charge for using a gate goes to the gates owner
+# chargefreedestination - Whether a gate whose destination is a free gate is still charged
+# freegatesgreen - Whether a free gate in the destination list is drawn green
+#################
+# Debug options #
+#################
+# debug - Debug -- Only enable if you have issues, massive console output
+# permdebug - This will output any and all Permissions checks to console, used for permissions debugging (Requires debug: true)
 portal-folder: plugins/Stargate/portals/
-# The folder for storing gate layouts
 gate-folder: plugins/Stargate/gates/
-# The default gate network
 default-gate-network: central
-# Whether or not to destroy gates with explosions (Creeper, TNT, etc)
 destroyexplosion: false
-# The maximum number of gates allowed on a network - 0 for unlimited
 maxgates: 0
-# The language file to load for messages
 lang: en
-# Whether to remember the cursor location between uses
 destMemory: false
-# Ignore the entrance blocks of a gate when checking. Used to work around snowmen
 ignoreEntrance: false
-# Whether to allow vehicles through gates
 handleVehicles: true
-# Whether to sort network lists alphabetically
 sortLists: false
-# Whether to protect gate entrance material
 protectEntrance: false
-# The color used for drawing signs (Default: BLACK).
 signColor: BLACK
-
-# Stargate economy options
-
-# Whether to use an economy plugin (Uses Register to interact with all economy plugins)
 useiconomy: false
-# The cost to create a gate
 createcost: 0
-# The cost to destroy a gate
 destroycost: 0
-# The cost to use a gate
 usecost: 0
-# Whether the charge for using a gate goes to the gates owner
 toowner: false
-# Whether a gate whose destination is a free gate is still charged
 chargefreedestination: true
-# Whether a free gate in the destination list is drawn green
 freegatesgreen: false
-
-# Debug -- Only enable if you have issues, massive console output
 debug: false
-# This will output any and all Permissions checks to console, used for permissions debugging
 permdebug: false
